crates/biome_yaml_formatter/tests/specs/prettier/yaml/comment/flow-sequence-mapping.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/comment/flow-sequence-mapping.yml
---

# Input

```yml
    a:
      [
        check-format, check-lint,
        check-spelling,
        # coverage,
        # install-and-run-from-git,
      ]

    b:
      {
        a: check-format, b: check-lint,
        c: check-spelling,
        # d: coverage,
        # e: install-and-run-from-git,
      }

    d:
      # prettier-ignore
      [
        check-format, check-lint,
        check-spelling,
        # coverage,
        # install-and-run-from-git,
      ]

    e:
      # prettier-ignore
      {
        a: check-format, b: check-lint,
        c: check-spelling,
        # d: coverage,
        # e: install-and-run-from-git,
      }

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
flow-sequence-mapping.yml:9:5 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a block mapping entry but instead found 'b:
          {
            a: check-format, b: check-lint,
            c: check-spelling,
            # d: coverage,
            # e: install-and-run-from-git,
          }
    
        d:
          # biome-ignore format: prettier ignore
          [
            check-format, check-lint,
            check-spelling,
            # coverage,
            # install-and-run-from-git,
          ]
    
        e:
          # biome-ignore format: prettier ignore
          {
            a: check-format, b: check-lint,
            c: check-spelling,
            # d: coverage,
            # e: install-and-run-from-git,
          }'.
  
     7 │       ]
     8 │ 
   > 9 │     b:
       │     ^^
  > 10 │       {
        ...
  > 30 │         c: check-spelling,
  > 31 │         # d: coverage,
  > 32 │         # e: install-and-run-from-git,
  > 33 │       }
       │       ^
  
  i Expected a block mapping entry here.
  
     7 │       ]
     8 │ 
   > 9 │     b:
       │     ^^
  > 10 │       {
        ...
  > 30 │         c: check-spelling,
  > 31 │         # d: coverage,
  > 32 │         # e: install-and-run-from-git,
  > 33 │       }
       │       ^
  

```
